feat: payment_method & pay
